Connect DB and UserController

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 #server.port=8081
+server.port=8084
+spring.datasource.platform=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5433/monsterdb
+spring.datasource.username=root
+spring.datasource.password=secret
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.defer-datasource-initialization=true
+logging.level.org.springframework=ERROR
+############################################################
+#if you want initial always set spring.sql.init.mode = always
+#spring.sql.init.mode=always
+spring.sql.init.mode=embedded
+############################################################
